2015/submissions/jm11/fib/error.log
In file included from /home/ubuntu/toi/2015/_questions/fib/main.cpp:4:0:
/home/ubuntu/toi/2015/submissions/jm11/fib/submission.h: In function ‘long long unsigned int fib(int)’:
/home/ubuntu/toi/2015/submissions/jm11/fib/submission.h:7:16: error: expected primary-expression before ‘=’ token
         return = fib(x-1)+fib(x-2);
                ^
/home/ubuntu/toi/2015/submissions/jm11/fib/submission.h:9:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
